--- a/servos/CMakeLists.txt
+++ b/servos/CMakeLists.txt
@@ -6,4 +6,4 @@ include_directories(${CMAKE_BINARY_DIR})
 
 add_executable(arms arms.c)
 target_link_libraries(arms wiringPi wiringPiDev pthread m wiringPiPca9685)
-
+install(TARGETS arms DESTINATION bin)
