--- a/servos/CMakeLists.txt
+++ b/servos/CMakeLists.txt
@@ -6,4 +6,8 @@ include_directories(${CMAKE_BINARY_DIR})
 
 add_executable(arms arms.c)
 target_link_libraries(arms wiringPi wiringPiDev pthread m wiringPiPca9685)
-install(TARGETS arms DESTINATION bin)
+install(TARGETS arms DESTINATION /home/pi/bmos/servos)
+install(DIRECTORY servos DESTINATION /home/pi/bmos
+        PATTERN "servos/*"
+        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+                    GROUP_EXECUTE GROUP_READ)
